# LocalOllamaChat

./: .gitignore  README.md  package-lock.json  package.json  rebuild.bat  tsconfig.json  tsconfig.tsbuildinfo
public/: app-config.json  mcp-config.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: DynamicBackground.tsx  MarkdownRenderer.tsx
src/lib/: mcp.ts  web-search.ts
