[package]
name = "my-kizo"
version = "0.1.0"
description = "My-Kizo - Local LLM Chat Desktop App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "http-all", "window-close", "global-shortcut-all", "shell-execute", "window-show", "window-hide", "shell-open", "system-tray", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["native-tls"], default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
